<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PemasukanActivity">

    // Kategori
    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/idKat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txKat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txAksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>
        // Teks Kategori
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_kategori"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/black"
            android:textSize="17sp"/>

        <EditText
            android:layout_marginTop="12dp"
            android:id="@+id/kategori_pemasukan2"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:background="@drawable/kategori_bg_pengeluaran"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:hint="@string/kategori_pemasukan" />


    </LinearLayout>


    // Tanggal
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tanggal"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="12dp"
            android:id="@+id/pilih_tanggal_pemasukan"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:background="@drawable/calendar_view"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:hint="@string/tgl_default" />

    </LinearLayout>

    // Nominal
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nominal"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <EditText
            android:inputType="number"
            android:id="@+id/nominal_pemasukan"
            android:layout_marginTop="8dp"
            android:layout_width="292dp"
            android:layout_height="57dp"
            android:background="@drawable/view_nominal_pemasukan"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:hint="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginRight="24dp"
            android:id="@+id/hapus_pemasukan"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_hapus"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="Hapus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_pemasukan"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_simpan"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="Edit"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</LinearLayout>